ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - GUI:                                                  |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-10-16 Malte Geierhos
	- DATABASE: 
		* fixed #780 sql error during setup 

2007-10-15 Raphael Geissert
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)
        * Updated German translation (thanks to the German translation team)
        * Updated the A=B files

2007-10-15 Benedikt Heintel
	- DOCS:
		* Updated: Fedora install script
	- ENGINE:
		* Fixed: Prevented Sub-/Alias-/Domainmanager from creating index.html, if directory exists
		* Fixed #55: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0
		* Fixed #774: AWStats not working
	- DATABASE
		* changed English language: Added drop

2007-10-15 Malte Geierhos
	- SETUP:
		* fixed #771 according to joximu
	- ENGINE:
		* fixed #773 perl errors in dmn-mngr

2007-10-15 Johannes Schobig
	- SETUP:
		* Ask before generating passwords

2007-10-14 Raphael Geissert
    - ENGINE:
        * Fixed #767: Backup folder under domain-aliases
        * Fixed #768: scripts delayed because of empty entropy pool
        * Removed suggesting main sql user password
        * Improved fix for #768
        * Correctly load the new db keys when generated (also reported in #768)
    - GUI:
        * Fixed curlang()
    - MAKEFILE:
        * Fixed error where fastcgi_ispcp.conf was installed in an incorrect directory

2007-10-14 Malte Geierhos
	- GUI:
		* fixed #740 autoresponder for subdomains cannot be activated

2007-10-14 Raphael Geissert
    - GUI:
        * Security Fix: XSS injection in gui/index.php
    - CONFIGS:
        * Enable suexec on all CGI's whether fastcgi is loaded or not
    - SETUP: