@@ -81,7 +81,8 @@ DROP TABLE IF EXISTS `lang_Chinese`;
 DROP TABLE IF EXISTS `lang_Danish`;
 DROP TABLE IF EXISTS `lang_Deutsch`;
 DROP TABLE IF EXISTS `lang_Dutch`;
-DROP TABLE IF EXISTS `lang_English`;
+-- English Translation is up to date after install
+-- DROP TABLE IF EXISTS `lang_English`;
 DROP TABLE IF EXISTS `lang_Finnish`;
 DROP TABLE IF EXISTS `lang_French`;
 DROP TABLE IF EXISTS `lang_German`;
